--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h2>About Me</h2>
 
 <section class="profile">
-<img src="d:\ComLab\Downloads\528278471_18071864996512514_2552734170470737460_n.jpg" alt="Profile Picture">
+<img src="images/profile.jpg" alt="Profile Picture">
 <div>
 <p><strong>Name:</strong>Harriel delfin</p>
 <p><strong>Birthdate:</strong> Month January Day,17 Year2006</p>
@@ -67,19 +67,19 @@
 
 <section class="favorites">
 <figure>
-<img src="d:\ComLab\Downloads\images.jpg" alt="Favorite Artist Maroon5">
+<img src="images/maroon5.jpg" alt="Favorite Artist Maroon5">
 <figcaption><h2>Maroon5</h2></figcaption>
 <p>Obsessed with Maroon5 music—always hits right!</p>
 </figure>
 
 <figure>
-<img src="d:\ComLab\Downloads\healthiest-nuts-phpuOEIm3.webp" alt="Favorite Food Nuts">
+<img src="images/nuts.webp" alt="Favorite Food Nuts">
 <figcaption><h2> Mix Nuts</h2></figcaption>
     <p>Mix nuts is a crunchy, wholesome mix of almonds, cashews, peanuts, and more—perfect for snacking anytime.</p>
 </figure>
 
 <figure>
-<img src="d:\ComLab\Downloads\download.jpg" alt="Favorite Place Niagara falls canada">
+<img src="images/place.jpg" alt="Favorite Place Niagara falls canada">
 <figcaption><h2> Niagara Falls, Canada</h2></figcaption>
 <p>Niagara Falls in Canada is a breathtaking natural wonder, famous for its stunning waterfalls and vibrant atmosphere.</p>
 </figure>
